CREATE SEQUENCE users_seq START WITH 1 INCREMENT BY 1;

CREATE TABLE USERS(
    ID BIGINT PRIMARY KEY,
    NAME VARCHAR(255) NOT NULL,
    EMAIL VARCHAR(255) NOT NULL,
    PASSWORD VARCHAR(255) NOT NULL
)