CREATE SEQUENCE option_seq START WITH 1 INCREMENT BY 1;

CREATE TABLE OPTION (
    ID BIGINT PRIMARY KEY,
    DESCRIPTION VARCHAR NOT NULL,
    IS_RIGHT BOOLEAN NOT NULL,
    HIT_COUNT BIGINT NOT NULL,
    QUESTION_ID BIGINT NOT NULL REFERENCES QUESTION(ID)
);